<?xml version="1.0" encoding="utf-8"?>
<resources>
	<string name="appName">Maintenance</string>
	<string name="help">Help</string>

	<string name="about">About</string>
	<string name="appDescr">An app to schedule and record maintenance of cars, motorcycles, boats, and other vehicles</string>
	<string name="eula">To the fullest extent allowed by law, this software comes with no warranty, either express or implied. By installing and/or using this software you agree to hold harmless Brigham Young University - Idaho and its sponsors, employees, and students.</string>
	<string name="feedback">TODO</string>
	<string name="contribs">Contributors</string>
	<string name="spring">Spring 2018 Contributors:</string>
	<string name="winter">Winter 2018 Contributors:</string>
	<string name="logo">Images on this app have been created with LogoMakr.  Give it a shot.</string>
	<string name="helpTextTitle">How to use the Maintenance App</string>

	<string name="mistake">Well, this is embarrassing. Something is wrong with this part of the app, and it isn\'t working. We apologize.</string>

	<string name="addVehicle">Add Vehicle</string>
	<string name="year">Year</string>
	<string name="name">Name</string>
	<string name="make">Make</string>
	<string name="model">Model</string>
	<string name="vin">VIN</string>
	<string name="add">Add</string>
	<string name="reset">Reset</string>
    <string name="current_mileage">Current Mileage</string>
    <string name="ex_20000">Ex. 20000</string>
	<string name="enter_current_mileage">Enter Current Mileage</string>
    <string name="submit_mileage">Submit Mileage</string>

	<string name="delete">Delete</string>

	<string name="v1_mazda">2001 Mazda 626</string>
	<string name="v2_jeep">2004 Jeep Liberty</string>
	<string name="v3_toyota">2011 Toyota 4 Runner</string>



	<string name="activity">Activity</string>
	<string name="compute">COMPUTE</string>
	<string name="blank"> </string>
	<string name="oil">Oil</string>
	<string name="brakes">Brakes</string>
	<string name="tires">Tires</string>
	<string name="battery">Battery</string>
	<string name="air_filter">Air Filter</string>
	<string name="other_maintenance">Other</string>

	<string name="color">Color</string>

	<string name="help_description">Click the Add button either on top or the bottom to add your vehicle.</string>
	<string name="help_description2">When you choose one of your vehicles, a menu of maintenance options will appear. </string>
	<string name="help_description3">Select an option (oil, brakes, etc.), record the last time you performed maintenance on that item, and the app will inform you
	when it's time to check your vehicle in for maintenance.</string>



	<string name="last_oil_change">Miles at Last Oil Change:</string>
	<string name="next_oil_change">Miles at Next Oil Change:</string>
	<string name="frequency_of_oil">How often would you like an oil change? (default 3,000 (5,000, 7,500, 10,000))</string>
	<string name="what_oil_maintenance">What Maintenance is Needed? \n 1) Oil change \n 2) New oil filter \n 3) Topping off fluids</string>
	<string name="last_brake_inspection">Miles at Last Brake Inspection:</string>
	<string name="next_brake_inspection">Miles at Next Brake Inspection:</string>
	<string name="frequency_of_brakes">How often would you like a brake inspection? (default 25,000 (50,000, 75,000))</string>
	<string name="what_brake_maintenance">What Maintenance is Needed? \n 1) New brake pads \n 2) Resurfacing (or replacing) rotars \n 3) Servicing calipers</string>

	<string name="last_tire_inspection">Miles at Last Tire Inspection:</string>
	<string name="next_tire_inspection">Miles at Next Tire Inspection:</string>
	<string name="frequency_of_tires">How often would you like an tire inspection? (default 3,000 (5,000, 6,000))</string>
	<string name="last_tire_new">Miles at Last New Tires:</string>
	<string name="next_tire_new">Miles at Next New Tires:</string>
	<string name="frequency_of_new_tires">What brand of tires do you have? (default 25,000 (BRANDS: 50,000, 75,000))</string>
	<string name="what_tire_maintenance">What Maintenance is Needed? \n 1) Tire rotation, balancing, alignment \n 2) New tires</string>
	<string name="_2015_ford_f150">2015 Ford F150</string>
	<string name="todo">TODO</string>
	<string name="text">text</string>

	<string name="last_new_battery">Miles at Last New Battery:</string>
	<string name="next_new_battery">Miles at Next New Battery:</string>
	<string name="what_battery_maintenance">What Maintenance is Needed? \n 1) Service battery \n 2) Replace battery</string>
	<string name="to">to</string>
	<string name="miles_at_last_air_filter_change">Miles at last air filter change</string>
	<string name="miles_at_next_air_filter_change">Miles at next air filter change</string>
	<string name="what_air_filter_maintenance">What Maintenance is Needed? \n 1) Replace air filter</string>
	<string name="how_often_would_you_like_your_air_filter_changed">How often would you like your air filter changed? (Toyota 15,000 | Ford: 30,000 | Chevrolet: 45,000) </string>
	<string name="miles_at_next_maintenance">Miles at Next Maintenance</string>
	<string name="miles_at_last_maintenance">Miles at Last Maintenance</string>
	<string name="how_often_would_you_like_maintenance">How often would you like maintenance?</string>
	<string name="what_maintenance_is_needed">What Maintenance is Needed?</string>


	<string-array name="oil_frequency_array">
		<item>Shop Recommendation (3,000 miles)</item>
		<item>Owner's Manual Recommendation for Severe Conditions (5,000 miles)</item>
		<item>Owner's Manual Recommendation for Mild Conditions (10,000 miles)</item>
	</string-array>


</resources>
