<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	tools:layout_editor_absoluteY="81dp">

	<TextView
		android:id="@+id/textView4"
		android:layout_width="238dp"
		android:layout_height="31dp"
		android:layout_marginStart="8dp"
		android:layout_marginTop="8dp"
		android:text="@string/last_brake_inspection"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="parent"/>

	<TextView
		android:id="@+id/textView6"
		android:layout_width="235dp"
		android:layout_height="23dp"
		android:layout_marginStart="8dp"
		android:layout_marginTop="8dp"
		android:text="@string/next_brake_inspection"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/editText_LOC"/>

	<android.support.constraint.Guideline
		android:id="@+id/guideline"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:orientation="horizontal"
		app:layout_constraintGuide_begin="62dp"/>

	<EditText
		android:id="@+id/editText_LOC"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginStart="8dp"
		android:layout_marginTop="8dp"
		android:ems="10"
		android:hint="@string/enter_current_mileage"
		android:inputType="number"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/textView4"/>

	<Button
		android:id="@+id/b_compute"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginEnd="8dp"
		android:layout_marginStart="8dp"
		android:layout_marginTop="44dp"
		android:text="@string/compute"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintHorizontal_bias="0.476"
		app:layout_constraintStart_toEndOf="@+id/editText_LOC"
		app:layout_constraintTop_toTopOf="parent"/>

	<EditText
		android:id="@+id/editText_NOC1"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginStart="8dp"
		android:layout_marginTop="12dp"
		android:ems="10"
		android:hint="@string/blank"
		android:inputType="number"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/textView6"/>

	<Spinner
		android:id="@+id/spinner"
		android:layout_width="395dp"
		android:layout_height="24dp"
		android:layout_marginStart="8dp"
		android:layout_marginTop="8dp"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/textView9"/>

	<TextView
		android:id="@+id/textView9"
		android:layout_width="391dp"
		android:layout_height="31dp"
		android:layout_marginStart="8dp"
		android:layout_marginTop="8dp"
		android:text="@string/frequency_of_brakes"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/editText_NOC1"/>

	<TextView
		android:id="@+id/textView7"
		android:layout_width="352dp"
		android:layout_height="124dp"
		android:layout_marginStart="8dp"
		android:layout_marginTop="92dp"
		android:text="@string/what_brake_maintenance"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/editText_NOC1"/>
</android.support.constraint.ConstraintLayout>