<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	tools:layout_editor_absoluteY="81dp">

	<TextView
		android:id="@+id/textView8"
		android:layout_width="352dp"
		android:layout_height="54dp"
		android:layout_marginStart="8dp"
		android:text="@string/what_tire_maintenance"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/spinner3"/>

	<TextView
		android:id="@+id/textView4"
		android:layout_width="227dp"
		android:layout_height="19dp"
		android:layout_marginStart="8dp"
		android:layout_marginTop="16dp"
		android:text="@string/last_tire_inspection"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="parent"/>

	<TextView
		android:id="@+id/textView13"
		android:layout_width="230dp"
		android:layout_height="22dp"
		android:layout_marginStart="8dp"
		android:layout_marginTop="12dp"
		android:text="@string/last_tire_new"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/spinner"/>

	<TextView
		android:id="@+id/textView6"
		android:layout_width="243dp"
		android:layout_height="27dp"
		android:layout_marginStart="8dp"
		android:layout_marginTop="12dp"
		android:text="@string/next_tire_inspection"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/editText_LOC"/>

	<TextView
		android:id="@+id/textView14"
		android:layout_width="243dp"
		android:layout_height="27dp"
		android:layout_marginStart="8dp"
		android:layout_marginTop="8dp"
		android:text="@string/next_tire_new"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/editText_LNT"/>

	<android.support.constraint.Guideline
		android:id="@+id/guideline"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:orientation="horizontal"
		app:layout_constraintGuide_begin="62dp"/>

	<EditText
		android:id="@+id/editText_LOC"
		android:layout_width="wrap_content"
		android:layout_height="56dp"
		android:layout_marginStart="8dp"
		android:ems="10"
		android:hint="@string/enter_current_mileage"
		android:inputType="number"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/textView4"/>

	<Button
		android:id="@+id/b_compute"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginEnd="8dp"
		android:layout_marginStart="8dp"
		android:layout_marginTop="32dp"
		android:text="@string/compute"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintHorizontal_bias="0.396"
		app:layout_constraintStart_toEndOf="@+id/editText_LOC"
		app:layout_constraintTop_toTopOf="parent"/>

	<EditText
		android:id="@+id/editText_NOC1"
		android:layout_width="wrap_content"
		android:layout_height="54dp"
		android:layout_marginStart="8dp"
		android:ems="10"
		android:hint="@string/blank"
		android:inputType="number"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/textView6"/>

	<Spinner
		android:id="@+id/spinner"
		android:layout_width="395dp"
		android:layout_height="24dp"
		android:layout_marginEnd="8dp"
		android:layout_marginStart="8dp"
		android:layout_marginTop="12dp"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/textView9"/>

	<TextView
		android:id="@+id/textView9"
		android:layout_width="352dp"
		android:layout_height="40dp"
		android:layout_marginStart="8dp"
		android:layout_marginTop="16dp"
		android:text="@string/frequency_of_tires"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/editText_NOC1"/>

	<EditText
		android:id="@+id/editText_LNT"
		android:layout_width="wrap_content"
		android:layout_height="48dp"
		android:layout_marginStart="8dp"
		android:layout_marginTop="8dp"
		android:ems="10"
		android:hint="@string/enter_current_mileage"
		android:inputType="number"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/textView13"/>

	<EditText
		android:id="@+id/editText_NNT"
		android:layout_width="wrap_content"
		android:layout_height="54dp"
		android:layout_marginStart="8dp"
		android:layout_marginTop="8dp"
		android:ems="10"
		android:hint="@string/blank"
		android:inputType="number"
		android:text="@string/blank"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/textView14"/>

	<Spinner
		android:id="@+id/spinner3"
		android:layout_width="395dp"
		android:layout_height="24dp"
		android:layout_marginStart="8dp"
		android:layout_marginTop="8dp"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/textView15"/>

	<TextView
		android:id="@+id/textView15"
		android:layout_width="352dp"
		android:layout_height="40dp"
		android:layout_marginStart="8dp"
		android:layout_marginTop="8dp"
		android:text="@string/frequency_of_new_tires"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/editText_NNT"/>

	<Button
		android:id="@+id/b_compute1"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginEnd="40dp"
		android:layout_marginStart="8dp"
		android:layout_marginTop="40dp"
		android:text="@string/compute"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintHorizontal_bias="0.472"
		app:layout_constraintStart_toEndOf="@+id/textView13"
		app:layout_constraintTop_toBottomOf="@+id/spinner"/>
</android.support.constraint.ConstraintLayout>