<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	tools:layout_editor_absoluteY="81dp">

	<TextView
		android:id="@+id/textView8"
		android:layout_width="352dp"
		android:layout_height="124dp"
		android:layout_marginStart="8dp"
		android:layout_marginTop="92dp"
		android:text="@string/what_oil_maintenance"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/editText_NOC1"/>

	<TextView
		android:id="@+id/textView4"
		android:layout_width="236dp"
		android:layout_height="27dp"
		android:layout_marginStart="8dp"
		android:layout_marginTop="4dp"
		android:text="@string/miles_at_last_air_filter_change"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="parent"/>

	<TextView
		android:id="@+id/textView6"
		android:layout_width="234dp"
		android:layout_height="22dp"
		android:layout_marginStart="8dp"
		android:layout_marginTop="8dp"
		android:text="@string/miles_at_next_air_filter_change"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/editText_LOC"/>

	<android.support.constraint.Guideline
		android:id="@+id/guideline"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:orientation="horizontal"
		app:layout_constraintGuide_end="541dp"/>

	<EditText
		android:id="@+id/editText_LOC"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginStart="8dp"
		android:layout_marginTop="8dp"
		android:ems="10"
		android:hint="@string/enter_current_mileage"
		android:inputType="number"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/textView4"/>

	<Button
		android:id="@+id/b_compute"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginEnd="8dp"
		android:layout_marginStart="8dp"
		android:layout_marginTop="44dp"
		android:text="@string/compute"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintHorizontal_bias="0.476"
		app:layout_constraintStart_toEndOf="@+id/editText_LOC"
		app:layout_constraintTop_toTopOf="parent"/>

	<EditText
		android:id="@+id/editText_NOC1"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginStart="8dp"
		android:layout_marginTop="12dp"
		android:ems="10"
		android:hint="@string/blank"
		android:inputType="number"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/textView6"/>

	<Spinner
		android:id="@+id/spinner"
		android:layout_width="395dp"
		android:layout_height="24dp"
		android:layout_marginStart="8dp"
		android:layout_marginTop="8dp"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/textView9"/>

	<TextView
		android:id="@+id/textView9"
		android:layout_width="352dp"
		android:layout_height="38dp"
		android:layout_marginStart="8dp"
		android:layout_marginTop="8dp"
		android:text="How often would you like your air filter changed? ("
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/editText_NOC1"/>
</android.support.constraint.ConstraintLayout>