<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	xmlns:app="http://schemas.android.com/apk/res-auto">

	<TextView
		android:id="@+id/textTitle"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_alignParentStart="true"
		android:layout_alignParentTop="true"
		android:layout_marginStart="22dp"
		android:layout_marginTop="24dp"
		android:text="text"
		android:textStyle="bold"/>

	<TextView
		android:id="@+id/helpDescription"
		android:layout_width="306dp"
		android:layout_height="wrap_content"
		android:layout_alignParentTop="true"
		android:layout_alignStart="@+id/textTitle"
		android:layout_marginTop="64dp"
		android:text="@string/help_description"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintHorizontal_bias="0.513"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="parent"
		app:layout_constraintVertical_bias="1.0"/>

	<TextView
		android:id="@+id/helpDescription2"
		android:layout_width="324dp"
		android:layout_height="45dp"
		android:layout_alignParentTop="true"
		android:layout_alignStart="@+id/textTitle"
		android:layout_marginTop="128dp"
		android:text="@string/help_description2"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintHorizontal_bias="0.513"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="parent"
		app:layout_constraintVertical_bias="1.0"/>

	<TextView
		android:id="@+id/helpDescription3"
		android:layout_width="333dp"
		android:layout_height="90dp"
		android:layout_alignParentStart="true"
		android:layout_alignParentTop="true"
		android:layout_marginStart="21dp"
		android:layout_marginTop="196dp"
		android:text="@string/help_description3"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintHorizontal_bias="0.513"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="parent"
		app:layout_constraintVertical_bias="1.0"/>





</RelativeLayout>